--- a/src/main/webapp/finder.html
+++ b/src/main/webapp/finder.html
@@ -52,30 +52,12 @@
             margin-top: 20px;
         }
     </style>
-    <script>
-        function search() {
-            var input = document.getElementById("query").value;
-            fetch("/search", {
-                method: "POST",
-                body: JSON.stringify({ query: input }),
-                headers: { "Content-Type": "application/json" }
-            })
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById("result").innerHTML = "";
-                    data.forEach(item => {
-                        var p = document.createElement("p");
-                        p.textContent = item.name + " - " + item.phone + " - " + item.email;
-                        document.getElementById("result").appendChild(p);
-                    });
-                })
-                .catch(error => console.error(error));
-        }
-    </script>
 </head>
 <body>
-<input type="text" id="query">
-<button onclick="search()">检索</button>
-<div id="result"></div>
+<form action="find" method="get">
+    关键字符（请用空格分割）<input type="text" id="query" name="queryparm">
+    <button type="submit">检索</button>
+</form>
+    <div id="result"></div>
 </body>
 </html>
