--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        /* 美化 a 标签 */
+        a {
+            text-decoration: none; /* 删除下划线 */
+            color: #007BFF; /* 链接文本颜色 */
+            background-color: #f8f9fa; /* 背景颜色 */
+            font-family: Arial, sans-serif; /* 字体 */
+            font-size: 16px; /* 字体大小 */
+            padding: 5px 10px; /* 内边距 */
+            border: 1px solid #dee2e6; /* 边框 */
+            border-radius: 5px; /* 圆角 */
+        }
+
+        /* 鼠标悬停时的样式 */
+        a:hover {
+            background-color: #e9ecef; /* 鼠标悬停时的背景颜色 */
+        }
+    </style>
 </head>
 <body>
 <h1>"Hello World!"</h1>
 <br/>
 <a href="hello-servlet">Hello Servlet</a>
-<a href="find">Finder</a>
+<a href="finder.html">Finder</a>
 </body>
 </html>
