基本实现所有要求功能，仍然存在命名，规范，布局，bug等各种问题。

--- a/src/main/webapp/finder.html
+++ b/src/main/webapp/finder.html
@@ -24,10 +24,10 @@
         /*}*/
         input {
             width: 70%;
-
+            height: auto;
             margin-bottom: 10px;
             padding: 5px;
-            border-radius: 5px;
+            border-radius: 50px;
             border: 1px solid #ccc;
         }
 
@@ -44,12 +44,9 @@
         button:hover {
             background-color: #45a049;
         }
-
-        #result {
-            background-color: darkorange; /* 下层背景色 */
-            width: 60%;
-            height: 20px;
-            margin-top: 20px;
+        .ascii-art {
+            font-family: monospace;
+            white-space: pre;
         }
     </style>
 </head>
@@ -61,10 +58,50 @@
                     record.put("class", strClass);
                     record.put("mobile", mobile);
                     record.put("email", email);-->
-<form action="find" method="get">
-    关键字符（请用逗号分割,请按照学号、姓名、性别、班级、电话、邮箱书写，无值留空）<input type="text" id="query" name="queryparm">
+<h1 style="text-align: center">软院找人</h1>
+<form action="find" method="get" style="text-align: center">
+    检索字符（请用逗号分割,请按照学号、姓名、性别、班级、电话、邮箱顺序书写，无值留空）<input type="text" id="query" name="queryparm">
     <button type="submit">检索</button>
 </form>
-    <div id="result"></div>
+<pre style="background-color: black;color: #e9ecef">
+    你好啊，今天怎么样？
+    祝你有个好心情
+             \              .::::::`.::::::::::..
+              \          .''``````.:::::::::::::::::
+               \      .:',ere$ze c :::::::::::::::::::
+                \   ,'` e$$$$$$$-K eeeu...`````:::::::::
+                   .zd>^leeu^R$%:FJ$$$$$$$$$$e.. ``::::::
+               .ed$$$$4$$$$$P-u@" ""?????R$$$$$$$hc. ``:::
+             .e$$F"..: P??7loF .:::::::::::.."""?R$$$e. `:.
+            zF".:::::::`"""'.:::::::::::::::::::::.`"?$$e.`
+            .::::::::::::':::::::::::::::::::::::::::::.`"=.
+          .:::::::::::::` `:::::::::::::::::::::::::::::::..
+       .:::::::::::::` ud$ec.  ``:::::::::::::::::::::::::::::.
+     .:::::::::::`` .zd$$$$$$$ec..  ```::::::::::::::::::::::::::
+   .:::::::::::`    "??$$$$$$$$$$$P        ``::::::::::::::::::::::
+  ::::::::::` .. $$*.  ^$$$$$$$$$$ .e$**"" =e=..  ``::::::::::::::::.
+  ::::::::: :::.  . ^  $$P$$$$$$$$$$F  .'$$$N4$$L'::.  `:::::::::::::::
+  `::::::` :::::: $    '$$4$$$$$$$$% - : $$$F$$$$u`::::::. `:::::::::::.
+   :::::: :::::: .^m.-.e.$'$$$$$$$P.  -)z$?Cd$$$$$u `:::::::. `:::::::::
+    `::::::::::: J$buFh52d4$$$$$$$LcccccCz$$$$$$$$": `::::::::..:::::::::
+      `::::::::: $$$$$$$$PJ$$$$$$$$$$$$$$$$$$$$$F.d$$. `::::::::::::::::`
+        `::::::  ?$$$$$$$F$$$$$$$$$$$$$$$$$$$$P x$$$$$$L `::::::::::::::
+          ``:: dN ?$$$$$$N2$$?3$$$$$$$$$$$$$$P dP\$$$$$$$u `::::::::::::
+            `:'" $.`R$$P???$$P??????"$$$$$$$$ 9".d$$$$$$$$b.`::::::::::
+            ::   R$$. ?$$r  `..;; . $$$$$$$F"'$'$J?$$$$$$$f   ::::::::
+            `:.^""""""."?$`niiiodfu$$$$$F"z$$ ^""~""""`..::::  ::::::
+              `::::::::::`?beCCbe$$$$""cd$$$$i .`::::::::::::. `:::`
+                ``:::::::::`?$$$P"',cd$$$$$$$$r?k :::::::::::`.:::`
+                   ```::::::::: 4$$$$$$$$$$$$$"d$ ``::::::::::::`
+                         ``::: . $$$$$$$$$$$$fJ$F4$e.``:::::::`
+                              dR `$$$$$$$$$$"x$$ d$$$$eu,.```
+                          .e$ $E b?$$$$$$$".d$$ d$$$$$$$$$$$e..
+                    ..ee$$$$$ $$k`$$$$$$".d$$".$$$$$$$$$$$$$$$$$$hec.
+               .ze$$$$$$$$$$$b"$$heeeeeud$R" e$$$$$$$$$$$$$$$$$$$$$$$$$e.
+           z$$$$$$$$$$$$$$$$$$h`?c""""J$R z$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+      .ee$$$$$$$$$$$$$$$$$$$$$$hc"xJ>=".zd$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+    .d$$$$$$$$$$$$$$$$$$$$$$$$$$$$he$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+</pre>
+
 </body>
 </html>
